--- a/metadata/pkgcheck.conf
+++ b/metadata/pkgcheck.conf
@@ -1,2 +1,2 @@
 [DEFAULT]
-profiles = stable,dev,-default/linux/amd64/17.0/musl,-default/linux/amd64/17.0/x32
+profiles = stable,dev,-default/linux/amd64/17.0/musl,-default/linux/amd64/17.0/x32,-default/linux/x86/17.0/musl
