metadata: update pkgcheck.conf

--- a/metadata/pkgcheck.conf
+++ b/metadata/pkgcheck.conf
@@ -1,2 +1,3 @@
 [DEFAULT]
-profiles = stable,dev,-default/linux/amd64/17.0/musl,-default/linux/amd64/17.0/x32,-default/linux/x86/17.0/musl
+arches = amd64
+profiles = stable,-dev,-exp
